Fix for error messages; Added new icons; FIx when name is too long; Css changes

--- a/frontend/src/modules/Nodes/components/RunningJob/RunningJob.module.scss
+++ b/frontend/src/modules/Nodes/components/RunningJob/RunningJob.module.scss
@@ -96,6 +96,27 @@
   font-size: 12px;
 }
 
+.stateUpdateValueTextWrapper {
+  padding-top: 5px;
+  align-items: center;
+  display: flex;
+}
+
+.editIconWrapper {
+  padding-left: 5px;
+}
+
+.newValueOfState {
+  padding-left: 5px;
+
+  input {
+    font-size: 12px;
+    padding: 0 !important;
+    height: 20px !important;
+  }
+
+}
+
 .nodeStatusErrorWrapper {
   overflow: scroll;
   padding-left: 52px;
